--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,7 @@ iframe {
 .login100-form {
   width: 100%;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: cornsilk;
 }
 
 .login100-form-logo {
